# roblib

./: CMakeLists.txt
cmake/: roblibConfig.cmake.in
include/filters/kalman/: unscented_kalman_filter.hpp
include/filters/models/: constant_velocity_input_accel.hpp
include/roblib/control/controllers/: ilqr.hpp
include/roblib/control/models/: ilqr_2d_quadcopter.hpp
include/roblib/datatype/: circular_buffer.hpp
include/roblib/filters/kalman/: kalman_filter.hpp  unscented_kalman_filter.hpp
include/roblib/filters/models/: constant_acceleration_3d.hpp  constant_velocity_input_accel.hpp  quadrotor_imu_position.hpp  skid_steer_6_wheels.hpp
include/roblib/utils/logger/: simple_logger.hpp
include/roblib/utils/timers/: timer_profiler.hpp
include/roblib/utils/timing/: time_sync.hpp
include/utils/logger/: simple_logger.hpp
src/filters/kalman/models/: constant_acceleration_model_3d.cpp  constant_velocity_input_accel.cpp  quadrotor_imu_position.cpp  skid_steer_6_wheel.cpp
test/controller/: ilqr_test.cpp
test/datatype/: circular_buffer_test.cpp
test/filters/: unscented_kalman_filter_test.cpp
